Compression working for war and peace